NXT-2006: BE changes to enable manipulating linked components/metanodes
* Adding Desktop API functions and utility classes
* Adding workflow command adapter to run commands in desktop functions

NXT-2006 (Desktop functions to link/unlink components)